--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,14 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+
+.idea
+*.iml
+.gradle/
+build/
+
+# ignore Eclipse specifics
+.classpath
+.settings
+.project
+.factorypath
