--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,6 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -25,3 +24,106 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
+  publish:
+    needs:
+      - build
+    name: "Publish to maven repo"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3.4.0
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Generate version
+        uses: HardNorth/github-version-generate@v1.1.2
+        with:
+          version-source: file
+          version-file: build.gradle
+          version-file-extraction-pattern: '(?<=version\s*=\s*'')\S+(?='')'
+
+      - name: Validate Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Publish to Reposilite
+        uses: gradle/gradle-build-action@v2.2.1
+        env:
+          MAVEN_NAME: '${{ secrets.MAVEN_NAME }}'
+          MAVEN_TOKEN: '${{ secrets.MAVEN_TOKEN }}'
+          ORG_GRADLE_PROJECT_signingKey: '${{ secrets.GPG_KEY }}'
+          ORG_GRADLE_PROJECT_signingPassword: '${{ secrets.GPG_PASSPHRASE }}'
+          ORG_GRADLE_PROJECT_signingKeyId: '${{ secrets.GPG_KEYID }}'
+        with:
+          arguments: publishMavenPublicationToReposiliteRepository
+
+      - name: Publish to Maven Central
+        if: "!contains(env.CURRENT_VERSION, 'SNAPSHOT')"
+        uses: gradle/gradle-build-action@v2.2.1
+        env:
+          ORG_GRADLE_PROJECT_sonatypeUsername: '${{ secrets.ORG_GRADLE_PROJECT_SONATYPEUSERNAME }}'
+          ORG_GRADLE_PROJECT_sonatypePassword: '${{ secrets.ORG_GRADLE_PROJECT_SONATYPEPASSWORD }}'
+          ORG_GRADLE_PROJECT_signingKey: '${{ secrets.GPG_KEY }}'
+          ORG_GRADLE_PROJECT_signingPassword: '${{ secrets.GPG_PASSPHRASE }}'
+          ORG_GRADLE_PROJECT_signingKeyId: '${{ secrets.GPG_KEYID }}'
+        with:
+          arguments: publishToSonatype closeAndReleaseStagingRepository
+
+      - name: Create Pre-Release
+        if: contains(env.CURRENT_VERSION, 'SNAPSHOT')
+        uses: ncipollo/release-action@v1.10.0
+        with:
+          tag: ${{ env.CURRENT_VERSION }}
+          generateReleaseNotes: true
+          commit: main
+          prerelease: true
+          body: |
+            ## Download Instructions
+            ### Maven
+            ```xml
+            <repository>
+              <id>reposilite-repository-snapshots</id>
+              <name>Reposilite Repository</name>
+              <url>https://maven.reposilite.com/snapshots</url>
+            </repository>
+            ```
+            ```xml
+            <dependency>
+              <groupId>io.javalin.community.graphql</groupId>
+              <artifactId>javalin-graphql</artifactId>
+              <version>${{ env.CURRENT_VERSION }}</version>
+            </dependency>
+            ```
+            ### Gradle
+            ```groovy
+            maven {
+              url "https://maven.reposilite.com/snapshots"
+            }
+            ```
+            ```groovy
+              implementation('io.javalin.community.graphql:javalin-graphql:${{ env.CURRENT_VERSION }}')
+            ```
+      - name: Create Release
+        if: "!contains(env.CURRENT_VERSION, 'SNAPSHOT')"
+        uses: ncipollo/release-action@v1.10.0
+        with:
+          tag: ${{ env.CURRENT_VERSION }}
+          generateReleaseNotes: true
+          commit: main
+          body: |
+            ## Download Instructions
+            ### Maven
+            ```xml
+            <dependency>
+              <groupId>io.javalin.community.graphql</groupId>
+              <artifactId>javalin-graphql</artifactId>
+              <version>${{ env.CURRENT_VERSION }}</version>
+            </dependency>
+            ```
+            ### Gradle
+            ```groovy
+              implementation('io.javalin.community.graphql:javalin-graphql:${{ env.CURRENT_VERSION }}')
+            ```
